tests/fixtures/negative/comments/KdocLinkValidation.kt
package comments

class ExistingType

/**
 * Resolves a valid reference to [ExistingType].
 */
fun loadValidLink(): ExistingType {
    return ExistingType()
}
